# curso_test1_class5_20250620

./: Calculator.py  NOTAS.txt  README.md  app.py  pyproject.toml
src/Paquete1/: mod1_pack.py
src/Paquete2/: mod2_pack.py
